@@ -1,6 +1,6 @@
 Package: igraph
 Version: 0.4
-Date: December 5, 2006
+Date: May 10, 2007
 Title:  Routines for simple graphs, network analysis.
 Author: Gabor Csardi <csardi@rmki.kfki.hu>
 Maintainer: Gabor Csardi <csardi@rmki.kfki.hu>
